Support for external OPML lists with jq filtering

--- a/feeds.yaml
+++ b/feeds.yaml
@@ -1,6 +1,12 @@
 feed_urls:
   - http://localhost:8000/initial.opml
 
+non_opml_blogroll_urls:
+  - url: https://lwindolf.github.io/rss-feed-index/data/blogroll.json
+    handler: jq
+    settings: ".blogrolls | keys | .[]"
+
+
 discover_depth: 100
 crawl_threads: 1
 
